--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -20,7 +20,7 @@ The tools of !GenPhyloData are described seperately below.
 !HostTreeGen is a tool to generate bifurcating tree topologies according to a birth-death process. The user inputs a time interval over which the process should take place, along with birth and death rates. Lineages which fail to reach the end of the interval are pruned away. There are additional options regarding, e.g:
   * Desired number of leaves.
   * Taxon sampling probability.
-  * Overriding stem edge time (i.e., the edge predating the root speciation).
+  * Overriding stem edge time (i.e., the edge predating the root split).
   * Leaf sizes drawn uniformly (with replacement) from a list of samples. This is convenient to mimic biological data more closely.
   * Requiring an immediate split at the start of the time interval.
   * Number of attempts to generate a tree that meets the requirements before surrendering.
