Edited wiki page GenPhyloData through web user interface.

--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -5,7 +5,7 @@
 == CONTENTS ==
 
   # [GenPhyloData#INTRODUCTION Introduction]
-  # [GenPhyloData#HOSTTREEGEN !HostTreeGen]
+  # [GenPhyloData#HOSTTREEGEN HostTreeGen]
 
 
 ==INTRODUCTION==
