--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -6,6 +6,9 @@
 
   # [GenPhyloData#INTRODUCTION Introduction]
   # [GenPhyloData#HOSTTREEGEN HostTreeGen]
+  # [GenPhyloData#GUESTTREEGEN GuestTreeGen]
+  # [GenPhyloData#BRANCHRELAXER BranchRelaxer]
+  # [GenPhyloData#SEQUENCE DATA Sequence data]
 
 
 ==INTRODUCTION==
@@ -59,7 +62,7 @@ This will also force the produced tree to retain this split after pruning, i.e.,
 
 ----
 
-==(2) !GuestTreeGen==
+==GUESTTREEGEN==
 [http://jprime.googlecode.com/files/GuestTreeGen.png]
 
 !GuestTreeGen is a tool to generate bifurcating "guest" trees that evolve over a known "host" tree according to a birth-death-like process. This is particularly well suited for creating realistic artificial gene families in light of a known taxonomy. The user inputs the host tree over which the process should take place, along with duplication, loss, and lateral transfer rates. The host tree must be rooted, bifurcating, and be dated with ultrametric (_clock-like_) branch lengths. Guest tree lineages which fail to reach the leaves of the host tree are pruned away. There are a plethora of options, such as:
@@ -109,7 +112,7 @@ G17     vv_acarolinensis3
 }}}
 ----
 
-==(3) !BranchRelaxer==
+==BRANCHRELAXER==
 [http://jprime.googlecode.com/files/BranchRelaxer.png]
 
 The trees produced in (1) and (2) are ultrametric (_clock-like_). In order to obtain more realistic branch lengths, this application enables relaxing the molecular clock by rescaling the lengths by heterogeneous rates. A number of popular techniques are supported, including:
@@ -171,7 +174,7 @@ Note however, that the host tree and guest tree must be ultrametric and temporal
 
 ----
 
-==(4) Producing sequence data==
+==SEQUENCE DATA==
 If you wish to produce synthetic sequence data for your trees, you may use, e.g., [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen], which supports a wide range of popular models of molecular sequence evolution for nucleotide, amino acid or codon data. Such programs typically support modelling also indels, gaps, and site rate heterogeneity.
 
 ----
