Edited wiki page GenPhyloData through web user interface.

--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -8,7 +8,7 @@
   # [GenPhyloData#HOSTTREEGEN HostTreeGen]
   # [GenPhyloData#GUESTTREEGEN GuestTreeGen]
   # [GenPhyloData#BRANCHRELAXER BranchRelaxer]
-  # [GenPhyloData#SEQUENCE DATA Sequence data]
+  # [GenPhyloData#"SEQUENCE DATA" Sequence data]
 
 
 ==INTRODUCTION==
