--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -27,6 +27,12 @@ The tools of !GenPhyloData are described seperately below.
 
 ----
 
+==REFERENCES==
+
+!GenPhyloData is currently under review. It has, however, been used in for instance the papers associated with [DLRS DLRS] and [DLTRS DLTRS].
+
+----
+
 ==HOSTTREEGEN==
 [http://jprime.googlecode.com/files/HostTreeGen.png]
 
