--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -6,6 +6,7 @@
 
 == CONTENTS ==
   # [DLRS#INTRODUCTION Introduction]
+  # [DLRS#DOWNLOAD Download]
   # [DLRS#REFERENCES References]
   # [DLRS#WORKFLOW Workflow]
   # [DLRS#INPUT Input]
@@ -46,6 +47,12 @@ Hence the name DLRS = duplications, losses, rates & sequence evolution.
 
 *Below, you will find information on the input and output of the application, while explanations of vital program options and some sample files can be found at the end of the document. If you want to get started quickly, we suggest that you download and try [DLRS#EXAMPLES Example 1], and have a look at it while reading through the other parts of the guide.*
 
+----
+----
+----
+
+== DOWNLOAD ==
+DLRS is distributed with the JPrIME JAR file, which can be obtained from Do
 
 ----
 ----
