Edited wiki page GenPhyloData through web user interface.

--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -5,6 +5,7 @@
 == CONTENTS ==
 
   # [GenPhyloData#INTRODUCTION Introduction]
+  # [GenPhyloData#DOWNLOAD Download]
   # [GenPhyloData#REFERENCES References]
   # [GenPhyloData#HOSTTREEGEN HostTreeGen]
   # [GenPhyloData#GUESTTREEGEN GuestTreeGen]
@@ -28,6 +29,8 @@ Additionally, as a 4th stage, it should be easy to use an external tool for crea
 The tools of !GenPhyloData are described seperately below.
 
 ----
+
+
 
 ==REFERENCES==
 
