--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -24,7 +24,7 @@ JPrIME-!GenPhyloData is a suite of tools to generate realistic synthetic (a.k.a 
   # !GuestTreeGen - for generating a bifurcating tree that evolves w.r.t. a given host tree. This is suitable for simulating gene family evolution.
   # !BranchRelaxer - for relaxing on the molecular clock assumptions of (1) or (2).
 
-Additionally, as a 4th stage, it should be easy to use an external tool for creating realistic artificial sequences for the host or guest tree leaves (i.e. taxa or genes), for example with the popular [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen] application.
+Additionally, as a 4th stage, it should be easy to use an external tool for creating realistic artificial sequences for the host or guest tree leaves (i.e. taxa or genes).
 
 The tools of !GenPhyloData are described seperately below.
 
