Edited wiki page GenPhyloData through web user interface.

--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -40,7 +40,7 @@ The tools of !GenPhyloData are described seperately below.
 
 !GenPhyloData has been published [http://www.biomedcentral.com/1471-2105/14/209/ here]. If you use it, please cite:
 
-_Sjöstrand J, Arvestad L, Lagergren J, Sennblad B (2013) GenPhyloData: Realistic simulation of gene family evolution. BMC Bioinformatics. 14:209._
+_Sjöstrand J, Arvestad L, Lagergren J, Sennblad B (2013) !GenPhyloData: Realistic simulation of gene family evolution. BMC Bioinformatics. 14:209._
 
 ----
 
