Edited wiki page VMCMC through web user interface.

--- a/wiki/VMCMC.wiki
+++ b/wiki/VMCMC.wiki
@@ -1,4 +1,5 @@
 #summary Short Tutorial for using JPrIME-VMCMC.
+#labels VisualMCMC,VMCMC,Featured
 
 *VMCMC has not yet been released, and the information below is not guaranteed to be up-to-date. Feedback is much appreciated, should you want to try VMCMC out. We hope to be able offer a stable first release in the near future.*
 
