--- a/wiki/VMCMC.wiki
+++ b/wiki/VMCMC.wiki
@@ -1,15 +1,15 @@
 #summary Short Tutorial for using JPrIME-VMCMC.
 #labels VisualMCMC,VMCMC,Featured
 
-*VMCMC has not yet been released, and the information below is not guaranteed to be up-to-date. Feedback is much appreciated, should you want to try VMCMC out. We hope to be able offer a stable first release in the near future.*
+*VMCMC has not yet been released, and the information below is not guaranteed to be up-to-date. However, [https://code.google.com/p/visualmcmc/ this site] for VMCMC is guaranteed to be up to date. Feedback is much appreciated, should you want to try VMCMC out. We hope to be able offer a stable first release in the near future.*
 
  [http://i58.tinypic.com/2up71o7.jpg]
 
 = Introduction =
 
-VMCMC is an application for analyzing output of MCMC chains. It deals with various metrics for assessing MCMC convergence, as well as summary statistics of inferred real-valued parameters, tree topologies, etc. VMCMC can be used with output from the C++ version of PrIME, and general tab-delimited files such as those produced by JPrIME some applications (e.g., [DLRS Delirious] and [DLTRS Deleterious]). 
+VMCMC is an application for analysing output of MCMC chains. It deals with various metrics for assessing MCMC convergence, as well as summary statistics of inferred real-valued parameters, tree topologies, etc. VMCMC can be used with output from the C++ version of PrIME, and general tab-delimited files such as those produced by JPrIME some applications (e.g., [DLRS Delirious] and [DLTRS Deleterious]). 
 
-VMCMC supports two modes for analyzing an MCMC chain:
+VMCMC supports two modes for analysing an MCMC chain:
   # Graphical user interface (GUI) for showing trace plots, etc.
   # Command-line summary of important statistics.
 
